# ros2_bdx

./: .gitignore
src/bdx_policy_deploy/: CMakeLists.txt  README.md  package.xml
src/bdx_policy_deploy/assets/mujoco/xmls/: bdx_legs_only.xml  scene_legs_only.xml
src/bdx_policy_deploy/assets/policies/: model_20260706.onnx  model_6248.onnx  model_legged_only.onnx  policy.onnx  policy_20260713.onnx  policy_20260714.onnx
src/bdx_policy_deploy/bdx_policy_deploy/: __init__.py  joint_pose_command_node.py  joint_pose_socket_bridge_node.py  mujoco_body_node.py  policy_interface.py  policy_node.py  pygame_heading_command_node.py  real_observation_socket_compare_node.py  resource_paths.py
src/bdx_policy_deploy/config/: bdx_legs_only.yaml  bdx_mujoco_test.yaml  bdx_policy.yaml
src/bdx_policy_deploy/launch/: mujoco_joint_pose_tune.launch.py  mujoco_policy_heading_ui.launch.py  mujoco_policy_heading_ui_legs_only.launch.py  mujoco_policy_test.launch.py  policy.launch.py
src/bdx_policy_deploy/scripts/: joint_pose_command_node  joint_pose_socket_bridge_node  mujoco_body_node  policy_node  pygame_heading_command_node  real_observation_socket_compare_node
src/bdx_policy_deploy/test/: test_joint_pose_socket_bridge.py  test_mujoco_body_node.py  test_policy_interface.py  test_real_observation_socket_compare.py
